--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .disabled {
@@ -18,16 +19,23 @@ body {
   background-color: #242942;
   border-radius: 1em;
   color: white;
-  padding-inline: .8em;
-  padding-block: .3em;
+  padding-inline: 1em;
+  padding-block: 0.3em;
   text-transform: uppercase;
-  font-family: 'Barlow Condensed';
+  font-family: "Barlow Condensed";
   font-weight: 700;
   margin-right: 1em;
 }
 
 .spaced-text {
-  letter-spacing: .2em;
+  font-family: 'Barlow Condensed';
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+}
+
+.text-disabled {
+  color: #a0a1ac;
+  letter-spacing: 0.3em;
 }
 
 .navbar {
@@ -51,71 +59,45 @@ body {
   color: #242942;
   font-weight: 700;
   gap: 2em;
-  font-size: 1.2em;
+  font-size: 1.1em;
   text-transform: uppercase;
-  font-family: 'Barlow Condensed', sans-serif, Helvetica;
+  font-family: "Barlow Condensed", sans-serif, Helvetica;
+}
+
+small {
+  font-family: "Barlow Condensed";
+  color: #a0a1ac;
+  width: 100%;
+  text-transform: uppercase;
 }
 
 .container {
   margin-left: 8em;
-  margin-block: 7em;
+  margin-block: 6em;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  position: relative;
 }
 
-small {
-  font-family: 'Barlow Condensed';
-  color: #a0a1ac;
-  text-transform: uppercase;
-}
-
-.title {
-  margin-top: .2em;
+.container__title {
+  margin-top: 0.2em;
   font-weight: 700;
-  width: 45%;
-  font-family: 'Barlow Condensed';
-  font-size: 3em;
+  width: 54%;
+  font-family: "Barlow Condensed";
+  font-size: 3.5em;
   color: #242942;
   text-transform: uppercase;
 }
 
-.subtitle {
+.container__subtitle {
   color: #5b5f71;
   margin-top: 1em;
-  width: 17%;
-  font-family: 'Barlow';
+  width: 27%;
+  font-size: 1.2rem;
+  font-family: "Barlow";
   margin-bottom: 4em;
-}
-
-.btn {
-  margin-top: 3em;
-  text-decoration: none;
-  background-color: #ff5c5c;
-  padding-inline: 1.4em;
-  padding-block: .7em;
-  font-family: 'Barlow Condensed';
-  text-transform: uppercase;
-  font-weight: 600;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  border-radius: .3em;
-  color: white;
-}
-
-.flex-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 2em;
-}
-
-div > p {
-  font-family: 'Barlow Condensed';
-  color: #a0a1ac;
-  text-transform: uppercase;
 }
 
 .container__image {
@@ -124,5 +106,62 @@ div > p {
      object-fit: contain;
   width: auto;
   height: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.container__content {
+  margin-top: 3em;
+}
+
+.container__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2em;
+}
+
+.container__flex__btn {
+  margin-top: 3em;
+  text-decoration: none;
+  background-color: #ff5c5c;
+  padding-inline: 1.4em;
+  padding-block: 0.7em;
+  font-family: "Barlow Condensed";
+  text-transform: uppercase;
+  font-weight: 600;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 0.3em;
+  color: white;
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    position: none;
+  }
+  .container__image {
+    height: 12rem;
+    width: auto;
+    position: none;
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    place-items: center;
+  }
+  .container__content {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
 }
 /*# sourceMappingURL=style.css.map */
