--- a/style.scss
+++ b/style.scss
@@ -18,108 +18,144 @@
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
-// Utility Classes 
+// Utility Classes
 
-.disabled{
+.disabled {
   color: hsl(231, 7%, 65%);
 }
 
-.badge{
+.badge {
   background-color: hsl(230, 29%, 20%);
   border-radius: 1em;
   color: white;
-  padding-inline: .8em;
-  padding-block: .3em;
+  padding-inline: 1em;
+  padding-block: 0.3em;
   text-transform: uppercase;
-  font-family: 'Barlow Condensed';
+  font-family: "Barlow Condensed";
   font-weight: 700;
   margin-right: 1em;
 }
 
-.spaced-text{
-  letter-spacing: .2em;
+.spaced-text {
+  font-family: 'Barlow Condensed';
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
 }
 
-.navbar{
+.text-disabled {
+  color: hsl(231, 7%, 65%);
+  letter-spacing: 0.3em;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
   margin-inline: 8em;
   margin-block-start: 2em;
 
-  &__navlinks{
+  &__navlinks {
     display: flex;
     text-decoration: none;
     list-style: none;
     color: hsl(230, 29%, 20%);
     font-weight: 700;
     gap: 2em;
-    font-size: 1.2em;
+    font-size: 1.1em;
     text-transform: uppercase;
-    font-family: 'Barlow Condensed', sans-serif, Helvetica;
+    font-family: "Barlow Condensed", sans-serif, Helvetica;
   }
 }
 
-.container{
+small {
+  font-family: "Barlow Condensed";
+  color: hsl(231, 7%, 65%);
+  width: 100%;
+  text-transform: uppercase;
+}
+
+.container {
   margin-left: 8em;
-  margin-block: 7em;
+  margin-block: 6em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  position: relative;
+
+  &__title {
+    margin-top: 0.2em;
+    font-weight: 700;
+    width: 54%;
+    font-family: "Barlow Condensed";
+    font-size: 3.5em;
+    color: hsl(230, 29%, 20%);
+    text-transform: uppercase;
+  }
+
+  &__subtitle {
+    color: hsl(230, 11%, 40%);
+    margin-top: 1em;
+    width: 27%;
+    font-size: 1.2rem;
+    font-family: "Barlow";
+    margin-bottom: 4em;
+  }
+
+  &__image {
+    aspect-ratio: 1 / 1;
+    object-fit: contain;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  &__content {
+    margin-top: 3em;
+  }
 }
 
-small{
-  font-family: 'Barlow Condensed';
-  color: hsl(231, 7%, 65%);
-  text-transform: uppercase;
-}
-
-.title{
-  margin-top: .2em;
-  font-weight: 700;
-  width: 45%;
-  font-family: 'Barlow Condensed';
-  font-size: 3em;
-  color: hsl(230, 29%, 20%);
-  text-transform: uppercase;
-}
-
-.subtitle{
-  color: hsl(230, 11%, 40%);
-  margin-top: 1em;
-  width: 17%;
-  font-family: 'Barlow';
-  margin-bottom: 4em;
-}
-
-.btn{
-  margin-top: 3em;
-  text-decoration: none;
-  background-color: hsl(0, 100%, 68%);
-  padding-inline: 1.4em;
-  padding-block: .7em;
-  font-family: 'Barlow Condensed';
-  text-transform: uppercase;
-  font-weight: 600;
-  width: fit-content;
-  border-radius: .3em;
-  color: white;
-}
-
-.flex-container{
+.container__flex {
   display: flex;
   gap: 2em;
+
+  &__btn {
+    margin-top: 3em;
+    text-decoration: none;
+    background-color: hsl(0, 100%, 68%);
+    padding-inline: 1.4em;
+    padding-block: 0.7em;
+    font-family: "Barlow Condensed";
+    text-transform: uppercase;
+    font-weight: 600;
+    width: fit-content;
+    border-radius: 0.3em;
+    color: white;
+    font-size: 1.2rem;
+  }
 }
 
-div > p{
-  font-family: 'Barlow Condensed';
-  color: hsl(231, 7%, 65%);
-  text-transform: uppercase;
-}
 
-.container__image{
-  aspect-ratio: 1 / 1;
-  object-fit: contain;
-  width: auto;
-  height: auto;
+@media screen and (max-width: 600px){
+  .container{
+    display: grid;
+    grid-template-columns: 1fr;
+    position: none;
+  }
+
+  .container__image{
+    height: 12rem;
+    width: auto;
+    position: none;
+    display: grid;
+    order: -1;
+    place-items: center;
+  }
+
+  .container__content{
+    order: 1;
+  }
+
 }
