--- a/style.css
+++ b/style.css
@@ -148,15 +148,10 @@ small {
     position: none;
   }
   .container__image {
-    height: 12rem;
-    width: auto;
-    position: none;
-    display: -ms-grid;
-    display: grid;
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
-    place-items: center;
+    height: 5em;
   }
   .container__content {
     -webkit-box-ordinal-group: 2;
