--- a/style.scss
+++ b/style.scss
@@ -21,8 +21,6 @@ body {
   overflow-x: hidden;
 }
 
-// Utility Classes
-
 .disabled {
   color: hsl(231, 7%, 65%);
 }
@@ -39,61 +37,157 @@ body {
   margin-right: 1em;
 }
 
-.spaced-text {
-  font-family: 'Barlow Condensed';
-  letter-spacing: 0.4em;
-  text-transform: uppercase;
-}
-
-.text-disabled {
-  color: hsl(231, 7%, 65%);
-  letter-spacing: 0.3em;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  margin-inline: 8em;
-  margin-block-start: 2em;
-
-  &__navlinks {
-    display: flex;
-    text-decoration: none;
-    list-style: none;
-    color: hsl(230, 29%, 20%);
-    font-weight: 700;
-    gap: 2em;
-    font-size: 1.1em;
+@media screen and (min-width: 1024px) {
+  .spaced-text {
+    font-family: "Barlow Condensed";
+    letter-spacing: 0.4em;
     text-transform: uppercase;
-    font-family: "Barlow Condensed", sans-serif, Helvetica;
+  }
+
+  .text-disabled {
+    color: hsl(231, 7%, 65%);
+    letter-spacing: 0.3em;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-inline: 8em;
+    margin-block-start: 2em;
+
+    &__navlinks {
+      display: flex;
+      text-decoration: none;
+      list-style: none;
+      color: hsl(230, 29%, 20%);
+      font-weight: 700;
+      gap: 2em;
+      font-size: 1.1em;
+      text-transform: uppercase;
+      font-family: "Barlow Condensed", sans-serif, Helvetica;
+    }
+
+    .navbar__navlinks + div > img {
+      display: none;
+    }
+  }
+
+  small {
+    font-family: "Barlow Condensed";
+    color: hsl(231, 7%, 65%);
+    width: 100%;
+    text-transform: uppercase;
+  }
+
+  .container {
+    margin-left: 8em;
+    margin-block: 6em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    position: relative;
+
+    &__title {
+      margin-top: 0.2em;
+      font-weight: 700;
+      width: 54%;
+      font-family: "Barlow Condensed";
+      font-size: 3.5em;
+      color: hsl(230, 29%, 20%);
+      text-transform: uppercase;
+    }
+
+    &__subtitle {
+      color: hsl(230, 11%, 40%);
+      margin-top: 1em;
+      width: 27%;
+      font-size: 1.1rem;
+      font-family: "Barlow";
+      margin-bottom: 4em;
+    }
+
+    &__image {
+      aspect-ratio: 1 / 1;
+      object-fit: contain;
+      width: auto;
+      height: auto;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+    &__content {
+      margin-top: 3em;
+    }
+  }
+
+  .container__flex {
+    display: flex;
+    gap: 2em;
+
+    &__btn {
+      margin-top: 3em;
+      text-decoration: none;
+      background-color: hsl(0, 100%, 68%);
+      padding-inline: 1.4em;
+      padding-block: 0.7em;
+      font-family: "Barlow Condensed";
+      text-transform: uppercase;
+      font-weight: 600;
+      width: fit-content;
+      border-radius: 0.3em;
+      color: white;
+      font-size: 1.2rem;
+    }
   }
 }
 
-small {
-  font-family: "Barlow Condensed";
-  color: hsl(231, 7%, 65%);
-  width: 100%;
-  text-transform: uppercase;
-}
+@media screen and (max-width: 600px) {
+  .navbar__logo {
+    margin-inline: 2em;
+    margin-block: 2em;
+  }
 
-.container {
-  margin-left: 8em;
-  margin-block: 6em;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  position: relative;
+  .navbar {
+    display: flex;
+    position: relative;
+  }
 
-  &__title {
+  .navbar__navlinks {
+    display: none;
+  }
+
+  .navbar__navlinks + div > img {
+    right: 2rem;
+    position: absolute;
+    vertical-align: middle;
+    top: 0;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .container__content {
+    order: 2;
+  }
+
+  .container__image {
+    height: 18.1em;
+    width: auto;
+  }
+
+  .container__title {
     margin-top: 0.2em;
     font-weight: 700;
     width: 54%;
     font-family: "Barlow Condensed";
-    font-size: 3.5em;
+    font-size: 2.5em;
     color: hsl(230, 29%, 20%);
     text-transform: uppercase;
   }
 
-  &__subtitle {
+  .container__subtitle {
     color: hsl(230, 11%, 40%);
     margin-top: 1em;
     width: 27%;
@@ -102,26 +196,13 @@ small {
     margin-bottom: 4em;
   }
 
-  &__image {
-    aspect-ratio: 1 / 1;
-    object-fit: contain;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 0;
-    right: 0;
+  small {
+    font-family: "Barlow Condensed";
+    color: hsl(231, 7%, 65%);
+    width: 100%;
+    text-transform: uppercase;
   }
-
-  &__content {
-    margin-top: 3em;
-  }
-}
-
-.container__flex {
-  display: flex;
-  gap: 2em;
-
-  &__btn {
+  .container__flex__btn {
     margin-top: 3em;
     text-decoration: none;
     background-color: hsl(0, 100%, 68%);
@@ -135,23 +216,4 @@ small {
     color: white;
     font-size: 1.2rem;
   }
-}
-
-
-@media screen and (max-width: 600px){
-  .container{
-    display: grid;
-    grid-template-columns: 1fr;
-    position: none;
-  }
-
-  .container__image{
-    order: -1;
-    height: 5em;
-  }
-
-  .container__content{
-    order: 1;
-  }
-
 }
