Fixed the inconsistency in the navigation bar

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -168,7 +168,8 @@ small {
     &__navlinks {
       display: flex;
       position: absolute;
-      right: 0;
+      right: 2em;
+      margin-block: 2em;
       text-decoration: none;
       list-style: none;
       color: hsl(230, 29%, 20%);
