--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,8 @@ small {
   .navbar__navlinks {
     display: flex;
     position: absolute;
-    right: 0;
+    right: 2em;
+    margin-block: 2em;
     text-decoration: none;
     list-style: none;
     color: hsl(230deg, 29%, 20%);
