--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,7 +31,8 @@ body {
   border-radius: 1em;
   color: white;
   padding-inline: 1em;
-  padding-block: 0.3em;
+  padding-block: .4em;
+  font-size: .9rem;
   text-transform: uppercase;
   font-family: "Barlow Condensed";
   font-weight: 700;
@@ -84,7 +85,7 @@ small {
       width: 67%;
       margin-block: .4em;
       font-family: "Barlow Condensed";
-      font-size: 3.2em;
+      font-size: 3.5em;
       color: hsl(230, 29%, 20%);
       text-transform: uppercase;
     }
@@ -120,7 +121,7 @@ small {
         text-decoration: none;
         background-color: hsl(0, 100%, 68%);
         padding-inline: 1.4em;
-        padding-block: 0.7em;
+        padding-block: 0.3em;
         font-family: "Barlow Condensed";
         text-transform: uppercase;
         font-weight: 600;
@@ -175,6 +176,7 @@ small {
       color: hsl(230, 29%, 20%);
       font-weight: 700;
       gap: 2em;
+      letter-spacing: .1rem;
       font-size: 1.1em;
       text-transform: uppercase;
       font-family: "Barlow Condensed", sans-serif, Helvetica;
@@ -249,7 +251,7 @@ small {
       text-decoration: none;
       background-color: hsl(0, 100%, 68%);
       padding-inline: 1.4em;
-      padding-block: 0.7em;
+      padding-block: 0.66em;
       font-family: "Barlow Condensed";
       text-transform: uppercase;
       font-weight: 600;
